# mkdocs-snippets

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: pypi-release.yml
mkdocs_snippets/: plugin.py
requirements/: dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
src/: plugin.py
src/mkdocs_snippets/: plugin.py
tests/: test_relativize_links.py
