[project]
name = "mkdocs-snippets"
description = "Snippets for MkDocs"
version = "1.3.1"
authors = [
    { name = "CyberOtter", email = "contact@betonquest.org" },
]

readme = "README.md"
[project.urls]
"Homepage" = "https://github.com/BetonQuest/mkdocs-snippets"
"Bug Tracker" = "https://github.com/BetonQuest/mkdocs-snippets/issues"


keywords = ["mkdocs", "snippets"]
license = "MIT"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
]
requires-python = ">=3.8"
dependencies = [
    'mkdocs>=1.0.4',
    'pyyaml>=6.0'
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[pytest]
testpaths = ["tests"]
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
